openAPI and fix
